Anchor links added

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="scss/style.css">
 </head>
 
@@ -21,15 +17,21 @@
         <header>
             <div class="header-content">
                 <div class="header-block">
-                    <span class="nav-button">
-                        INTRODUCTION
-                    </span>
-                    <span class="nav-button">
-                        FAIRY TALE
-                    </span>
-                    <span class="nav-button">
-                        PICTURES
-                    </span>
+                    <a href="#fairytale">
+                        <span class="nav-button">
+                            INTRODUCTION
+                        </span>
+                    </a>
+                    <a href="#fairytale">
+                        <span class="nav-button">
+                            FAIRY TALE
+                        </span>
+                    </a>
+                    <a href="#fairytale">
+                        <span class="nav-button">
+                            PICTURES
+                        </span>
+                    </a>
                 </div>
             </div>
         </header>
@@ -41,7 +43,7 @@
                 Guransh and Sparsh
             </div>
         </section>
-        <section class="fairytale">
+        <section class="fairytale" id="fairytale">
             <div class="tale-title">
                 <h2>Our Story...</h2>
             </div>
@@ -53,7 +55,9 @@
                             <img src="./static-assets/images/GS1.jpeg" />
                         </div>
                         <div class="tale-brief">
-
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
+                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
+                            vel
                         </div>
                     </div>
                 </div>
@@ -64,7 +68,9 @@
                             <img src="./static-assets/images/GS2.jpeg" />
                         </div>
                         <div class="tale-brief">
-
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
+                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
+                            vel
                         </div>
                     </div>
                 </div>
@@ -75,7 +81,9 @@
                             <img src="./static-assets/images/GS3.png" />
                         </div>
                         <div class="tale-brief">
-
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
+                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
+                            vel
                         </div>
                     </div>
                 </div>
@@ -86,7 +94,9 @@
                             <img src="./static-assets/images/GS5.jpeg" />
                         </div>
                         <div class="tale-brief">
-
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
+                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
+                            vel
                         </div>
                     </div>
                 </div>
