--- a/index.html
+++ b/index.html
@@ -102,6 +102,46 @@
                 </div>
             </div>
         </section>
+        <section class="gallery">
+            <div class="gallery-title">
+                <h2>Some moments close to us...</h2>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <img src="./static-assets/images/gallery/g20.JPG">
+                    <img src="./static-assets/images/gallery/g3.JPG">
+                    <img src="./static-assets/images/gallery/g4.JPG">
+                    <img src="./static-assets/images/gallery/g1.JPG">
+                    <img src="./static-assets/images/gallery/g5.JPG">
+                    <img src="./static-assets/images/gallery/g18.JPG">
+                </div>
+                <div class="column">
+                    <img src="./static-assets/images/gallery/g6.JPG">
+                    <img src="./static-assets/images/gallery/g7.JPG">
+                    <img src="./static-assets/images/gallery/g8.JPG">
+                    <img src="./static-assets/images/gallery/g9.JPG">
+                    <img src="./static-assets/images/gallery/g19.JPG">
+                    <img src="./static-assets/images/gallery/g22.JPG">
+                </div>
+                <div class="column">
+                    <img src="./static-assets/images/gallery/g10.JPG">
+                    <img src="./static-assets/images/gallery/g11.JPG">
+                    <img src="./static-assets/images/gallery/g12.JPG">
+                    <img src="./static-assets/images/gallery/g13.JPG">
+                    <img src="./static-assets/images/gallery/g2.JPG">
+                    <img src="./static-assets/images/gallery/g23.JPG">
+
+                </div>
+                <div class="column">
+                    <img src="./static-assets/images/gallery/g14.JPG">
+                    <img src="./static-assets/images/gallery/g15.JPG">
+                    <img src="./static-assets/images/gallery/g16.JPG">
+                    <img src="./static-assets/images/gallery/g17.JPG">
+                    <img src="./static-assets/images/gallery/g21.JPG">
+                    <img src="./static-assets/images/gallery/g24.JPG">
+                </div>
+            </div>
+        </section>
     </section>
 </body>
 
