--- a/index.html
+++ b/index.html
@@ -15,23 +15,42 @@
 <body>
     <section>
         <header>
-            <div class="header-content">
+            <div class="header-content-dweb">
                 <div class="header-block">
-                    <a href="#fairytale">
-                        <span class="nav-button">
-                            INTRODUCTION
-                        </span>
-                    </a>
                     <a href="#fairytale">
                         <span class="nav-button">
                             FAIRY TALE
                         </span>
                     </a>
-                    <a href="#fairytale">
+                    <a href="#gallery">
                         <span class="nav-button">
                             PICTURES
                         </span>
                     </a>
+                </div>
+            </div>
+            <div class="header-content-mweb">
+                <div class="nav-header">
+                    <div id="nav-icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="nav-wrapper">
+                    <div class="nav-links">
+                        <a href="#fairytale">
+                            <span class="nav-button">
+                                FAIRY TALE
+                            </span>
+                        </a>
+                        <a href="#gallery">
+                            <span class="nav-button">
+                                PICTURES
+                            </span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
@@ -50,59 +69,52 @@
             <div class="timeline">
                 <div class="container left">
                     <div class="content">
-                        <h2>25<sup>th</sup> May, 2021</h2>
+                        <h2>25&nbsp;•&nbsp;05&nbsp;•&nbsp;2022</h2>
                         <div class="tale-image">
                             <img src="./static-assets/images/GS1.jpeg" />
                         </div>
                         <div class="tale-brief">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
-                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
-                            vel
+                            We met, we talked, we fell for each other. It was a beautiful day, in Tobermory.
                         </div>
                     </div>
                 </div>
                 <div class="container right">
                     <div class="content">
-                        <h2>25<sup>th</sup> May, 2021</h2>
+                        <h2>13&nbsp;•&nbsp;08&nbsp;•&nbsp;2022</h2>
                         <div class="tale-image">
                             <img src="./static-assets/images/GS2.jpeg" />
                         </div>
                         <div class="tale-brief">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
-                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
-                            vel
+                            We started dating and meeting each other every weekend.
                         </div>
                     </div>
                 </div>
                 <div class="container left">
                     <div class="content">
-                        <h2>25<sup>th</sup> May, 2021</h2>
+                        <h2>03&nbsp;•&nbsp;10&nbsp;•&nbsp;2022</h2>
                         <div class="tale-image">
                             <img src="./static-assets/images/GS3.png" />
                         </div>
                         <div class="tale-brief">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
-                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
-                            vel
+                            Beautiful Guransh turned 30, glad we were able to spend the day together.
                         </div>
                     </div>
                 </div>
                 <div class="container right">
                     <div class="content">
-                        <h2>25<sup>th</sup> May, 2021</h2>
+                        <h2>31&nbsp;•&nbsp;12&nbsp;•&nbsp;2023</h2>
                         <div class="tale-image">
                             <img src="./static-assets/images/GS5.jpeg" />
                         </div>
                         <div class="tale-brief">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et neque convallis, molestie
-                            purus vitae, faucibus ipsum. Vestibulum aliquet aliquet felis, ac posuere magna convallis
-                            vel
+                            We came a long way, going through all the highs and lows together. We spent the 2024 New
+                            years together.
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="gallery">
+        <section class="gallery" id="gallery">
             <div class="gallery-title">
                 <h2>Some moments close to us...</h2>
             </div>
