Fixed header scroll issue

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <header>
             <div class="header-content-dweb">
                 <div class="header-block">
-                    <a href="#fairytale">
+                    <a data-section='fairytale'>
                         <span class="nav-button">
                             FAIRY TALE
                         </span>
                     </a>
-                    <a href="#gallery">
+                    <a data-section='gallery'>
                         <span class="nav-button">
                             PICTURES
                         </span>
@@ -40,12 +40,12 @@
                 </div>
                 <div class="nav-wrapper">
                     <div class="nav-links">
-                        <a href="#fairytale">
+                        <a data-section='fairytale'>
                             <span class="nav-button">
                                 FAIRY TALE
                             </span>
                         </a>
-                        <a href="#gallery">
+                        <a data-section='gallery'>
                             <span class="nav-button">
                                 PICTURES
                             </span>
@@ -66,49 +66,51 @@
             <div class="tale-title">
                 <h2>Our Story...</h2>
             </div>
-            <div class="timeline">
-                <div class="container left">
-                    <div class="content">
-                        <h2>25&nbsp;•&nbsp;05&nbsp;•&nbsp;2022</h2>
-                        <div class="tale-image">
-                            <img src="./static-assets/images/GS1.jpeg" />
-                        </div>
-                        <div class="tale-brief">
-                            We met, we talked, we fell for each other. It was a beautiful day, in Tobermory.
-                        </div>
-                    </div>
-                </div>
-                <div class="container right">
-                    <div class="content">
-                        <h2>13&nbsp;•&nbsp;08&nbsp;•&nbsp;2022</h2>
-                        <div class="tale-image">
-                            <img src="./static-assets/images/GS2.jpeg" />
-                        </div>
-                        <div class="tale-brief">
-                            We started dating and meeting each other every weekend.
+            <div class="timeline-wrap">
+                <div class="timeline">
+                    <div class="container left">
+                        <div class="content">
+                            <h2>25&nbsp;•&nbsp;05&nbsp;•&nbsp;2022</h2>
+                            <div class="tale-image">
+                                <img src="./static-assets/images/GS1.jpeg" />
+                            </div>
+                            <div class="tale-brief">
+                                We met, we talked, we fell for each other. It was a beautiful day, in Tobermory.
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="container left">
-                    <div class="content">
-                        <h2>03&nbsp;•&nbsp;10&nbsp;•&nbsp;2022</h2>
-                        <div class="tale-image">
-                            <img src="./static-assets/images/GS3.png" />
-                        </div>
-                        <div class="tale-brief">
-                            Beautiful Guransh turned 30, glad we were able to spend the day together.
+                    <div class="container right">
+                        <div class="content">
+                            <h2>13&nbsp;•&nbsp;08&nbsp;•&nbsp;2022</h2>
+                            <div class="tale-image">
+                                <img src="./static-assets/images/GS2.jpeg" />
+                            </div>
+                            <div class="tale-brief">
+                                We started dating and meeting each other every weekend.
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="container right">
-                    <div class="content">
-                        <h2>31&nbsp;•&nbsp;12&nbsp;•&nbsp;2023</h2>
-                        <div class="tale-image">
-                            <img src="./static-assets/images/GS5.jpeg" />
+                    <div class="container left">
+                        <div class="content">
+                            <h2>03&nbsp;•&nbsp;10&nbsp;•&nbsp;2022</h2>
+                            <div class="tale-image">
+                                <img src="./static-assets/images/GS3.png" />
+                            </div>
+                            <div class="tale-brief">
+                                Beautiful Guransh turned 30, glad we were able to spend the day together.
+                            </div>
                         </div>
-                        <div class="tale-brief">
-                            We came a long way, going through all the highs and lows together. We spent the 2024 New
-                            years together.
+                    </div>
+                    <div class="container right">
+                        <div class="content">
+                            <h2>31&nbsp;•&nbsp;12&nbsp;•&nbsp;2023</h2>
+                            <div class="tale-image">
+                                <img src="./static-assets/images/GS5.jpeg" />
+                            </div>
+                            <div class="tale-brief">
+                                We came a long way, going through all the highs and lows together. We spent the 2024 New
+                                years together.
+                            </div>
                         </div>
                     </div>
                 </div>
