Added future section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                             PICTURES
                         </span>
                     </a>
+                    <a data-section='future'>
+                        <span class="nav-button">
+                            FUTURE
+                        </span>
+                    </a>
                 </div>
             </div>
             <div class="header-content-mweb">
@@ -48,6 +53,11 @@
                         <a data-section='gallery'>
                             <span class="nav-button">
                                 PICTURES
+                            </span>
+                        </a>
+                        <a data-section='future'>
+                            <span class="nav-button">
+                                FUTURE
                             </span>
                         </a>
                     </div>
@@ -153,6 +163,60 @@
                     <img src="./static-assets/images/gallery/g17.JPG">
                     <img src="./static-assets/images/gallery/g21.JPG">
                     <img src="./static-assets/images/gallery/g24.JPG">
+                </div>
+            </div>
+        </section>
+        <section class="fairytale future" id="future">
+            <div class="tale-title">
+                <h2>Future I look forward to.</h2>
+            </div>
+            <div class="timeline-wrap">
+                <div class="timeline">
+                    <div class="container left">
+                        <div class="content">
+                            <div class="tale-image">
+                                <img src="./static-assets/images/icons/diamond.png" />
+                            </div>
+                            <div class="tale-brief">
+                                Get ready to walk down the aisle because we're about to tie the knot and officially
+                                become partners in crime! Wedding bells are ringing, and the adventure awaits!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container right">
+                        <div class="content">
+                            <div class="tale-image">
+                                <img src="./static-assets/images/icons/dog.png" />
+                            </div>
+                            <div class="tale-brief">
+                                Next stop: adding a four-legged furball to our squad! Get ready for chewed-up shoes and
+                                endless belly rubs. Dog hair, don't care!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container left">
+                        <div class="content">
+                            <div class="tale-image">
+                                <img src="./static-assets/images/icons/family.png" />
+                            </div>
+                            <div class="tale-brief">
+                                Buckle up! We're about to trade lazy Sundays for chaotic family game nights and
+                                endless trips to the grocery store. Let the chaos commence!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container right">
+                        <div class="content">
+                            <div class="tale-image">
+                                <img src="./static-assets/images/icons/old-couple.png" />
+                            </div>
+                            <div class="tale-brief">
+                                Picture this: we're wrinkled and gray, but still as crazy in love as ever! From movie
+                                nights to rocking chairs, we'll be embracing the golden years with laughter and love.
+                                Here's to growing old together, one hilarious moment at a time!
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
