Fixed some content

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                                 <img src="./static-assets/images/GS1.jpeg" />
                             </div>
                             <div class="tale-brief">
-                                We met, we talked, we fell for each other. It was a beautiful day, in Tobermory.
+                                We crossed paths, exchanged words, and bam! Cupid got all trigger-happy. Tobermory, you
+                                sneaky charmer, you just had to be the backdrop for our love story!
                             </div>
                         </div>
                     </div>
@@ -96,7 +97,9 @@
                                 <img src="./static-assets/images/GS2.jpeg" />
                             </div>
                             <div class="tale-brief">
-                                We started dating and meeting each other every weekend.
+                                Welcome to the 'Weekend Extravaganza' phase of our relationship, where every Saturday
+                                and Sunday became a whirlwind of fun and frolic. Forget about lounging around; we were
+                                all about 'Saturday Surprises' and 'Sunday Shenanigans'!
                             </div>
                         </div>
                     </div>
@@ -107,7 +110,9 @@
                                 <img src="./static-assets/images/GS3.png" />
                             </div>
                             <div class="tale-brief">
-                                Beautiful Guransh turned 30, glad we were able to spend the day together.
+                                My favorite human, Guransh, leveled up to the big 3-0! It was like watching a fine wine
+                                mature, but with more laughter and less cork-popping. Here's to a lifetime of birthdays
+                                together, where each year gets better, just like you.
                             </div>
                         </div>
                     </div>
@@ -118,8 +123,10 @@
                                 <img src="./static-assets/images/GS5.jpeg" />
                             </div>
                             <div class="tale-brief">
-                                We came a long way, going through all the highs and lows together. We spent the 2024 New
-                                years together.
+                                From the early days of 'awkward hellos' to weathering the storms of life, we've been
+                                through it all, my love. And what better way to kick off 2024 than by dodging fireworks
+                                and stealing kisses with you by my side? Here's to more adventures, mishaps, and
+                                unforgettable New Year's Eves together!
                             </div>
                         </div>
                     </div>
