--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="scss/style.css">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YVHQZ9VFT"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QQYPK5GKX3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-1YVHQZ9VFT');
+        gtag('config', 'G-QQYPK5GKX3');
     </script>
 </head>
 
